helm/istio/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    appgw.ingress.kubernetes.io/health-probe-status-codes: 200-599
    #appgw.ingress.kubernetes.io/use-private-ip: "true"
    kubernetes.io/ingress.class: azure/application-gateway
  name: istio
  namespace: istio-system
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: istiod
                port:
                  number: 443
            path: /
            pathType: Prefix
